// Vitest Snapshot v1

exports[`playground > basic > Should resolve playground info 1`] = `
{
  "files": {
    "App.vue": {
      "content": "<script setup>
import { ref } from 'vue'
const msg = ref('Hello World!')
</script>
<template>
  <h1>{{ msg }}</h1>
  <input v-model=\\"msg\\" />
</template>
",
      "ext": "vue",
    },
    "Comp.vue": {
      "content": "<template>
  <div>Comp</div>
</template>
",
      "ext": "vue",
    },
    "import-map.json": {
      "content": "{
  \\"imports\\": {
    \\"vue\\": \\"https://sfc.vuejs.org/vue.runtime.esm-browser.js\\"
  }
}
",
      "ext": "json",
    },
  },
  "importMap": "import-map.json",
  "key": "62b3bf5a",
  "settings": {},
  "title": "Playground%20demo",
}
`;

exports[`playground > basic > Should resolve playground info with settings 1`] = `
{
  "files": {
    "App.vue": {
      "content": "<script setup>
import { ref } from 'vue'
const msg = ref('Hello World!')
</script>
<template>
  <h1>{{ msg }}</h1>
  <input v-model=\\"msg\\" />
</template>
",
      "ext": "vue",
    },
    "Comp.vue": {
      "content": "<template>
  <div>Comp</div>
</template>
",
      "ext": "vue",
    },
  },
  "key": "1877a7d0",
  "settings": {
    "service": "https://element-plus.run/",
  },
  "title": "Playground%20demo2",
}
`;

exports[`playground > basic > Should resolve playground info with settings 2`] = `
{
  "files": {
    "App.vue": {
      "content": "<script setup>
import { ref } from 'vue'
const msg = ref('Hello World!')
</script>
<template>
  <h1>{{ msg }}</h1>
  <input v-model=\\"msg\\" />
</template>
",
      "ext": "vue",
    },
    "import-map.json": {
      "content": "{
  \\"imports\\": {
    \\"vue\\": \\"https://sfc.vuejs.org/vue.runtime.esm-browser.js\\"
  }
}
",
      "ext": "json",
    },
  },
  "importMap": "import-map.json",
  "key": "1877a7d0",
  "settings": {
    "service": "https://element-plus.run/",
  },
  "title": "Playground%20demo2",
}
`;

exports[`playground > ts preset > Should work 1`] = `
"<Playground key=\\"2d9205c7\\" title=\\"TS%20demo%201\\" link=\\"https%3A%2F%2Fwww.typescriptlang.org%2Fplay%23code%2FMYewdgzgLgBAthA5jAvDARACwKYBtcgwDuIATrgCboDcAULaJLBAA7YCGA1qjABQKIAXDGikAlmEQBKVAD4YjCCFzYAdAUT8kUurVYdOW6XSA\\">
</Playground>
"
`;

exports[`playground > ts preset > Should work 2`] = `
"<Playground key=\\"2d9205c8\\" title=\\"TS%20demo%202\\" link=\\"https%3A%2F%2Fwww.typescriptlang.org%2Fplay%3F1%23code%2FMYewdgzgLgBAthA5jAvDARACwKYBtcgwDuIATrgCboDcAULaJLBAA7YCGA1qjABQKIAXDGikAlmEQBKVAD4YjCCFzYAdAUT8kUurVYdOW6XSA\\">
</Playground>
"
`;

exports[`playground > vue preset > Should work 1`] = `
"<Playground key=\\"68440394\\" title=\\"Vue%20demo%20with%20customized%20imports\\" link=\\"https%3A%2F%2Fsfc.vuejs.org%2F%23eyJBcHAudnVlIjoiPHNjcmlwdCBzZXR1cD5cbmltcG9ydCB7IHJlZiB9IGZyb20gXCJ2dWVcIjtcblxuaW1wb3J0IENvbXAgZnJvbSBcIi4vQ29tcC52dWVcIjtcblxuY29uc3QgbXNnID0gcmVmKFwiSGVsbG8gV29ybGQhXCIpO1xuPC9zY3JpcHQ%2BXG5cbjx0ZW1wbGF0ZT5cbiAgPGgxPnt7IG1zZyB9fTwvaDE%2BXG4gIDxpbnB1dCB2LW1vZGVsPVwibXNnXCIgLz5cbiAgPENvbXAgLz5cbjwvdGVtcGxhdGU%2BXG4iLCJDb21wLnZ1ZSI6Ijx0ZW1wbGF0ZT5cbiAgPGRpdj5Db21wPC9kaXY%2BXG48L3RlbXBsYXRlPlxuIiwiaW1wb3J0LW1hcC5qc29uIjoie1wiaW1wb3J0c1wiOntcInZ1ZVwiOlwiaHR0cHM6Ly9zZmMudnVlanMub3JnL3Z1ZS5ydW50aW1lLmVzbS1icm93c2VyLmpzXCJ9fSJ9\\">
</Playground>
"
`;

exports[`playground > vue preset > Should work 2`] = `
"<Playground key=\\"0eebfebd\\" title=\\"Vue%20demo%20with%20customized%20settings\\" link=\\"https%3A%2F%2Fsfc.vuejs.org%2F%23__DEV____SSR__eyJBcHAudnVlIjoiPHNjcmlwdCBzZXR1cD5cbmltcG9ydCB7IHJlZiB9IGZyb20gXCJ2dWVcIjtcblxuY29uc3QgbXNnID0gcmVmKFwiSGVsbG8gUGxheWdyb3VuZCFcIik7XG48L3NjcmlwdD5cblxuPHRlbXBsYXRlPlxuICA8aDE%2Be3sgbXNnIH19PC9oMT5cbiAgPGlucHV0IHYtbW9kZWw9XCJtc2dcIiAvPlxuPC90ZW1wbGF0ZT5cbiJ9\\">
</Playground>
"
`;
